--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,8 +45,7 @@ dependencies:
   freezed: ^2.5.1
   go_router: ^13.2.2
   flutter_config: ^2.0.2
-  envied_generator: ^0.5.3
-  envied: ^0.5.3
+  flutter_dotenv: ^5.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -75,7 +74,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+      - lib/env/api_key.env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
